--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,11 +4,8 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -40,7 +37,7 @@
 }
 
 .title {
-  margin: 0;
+  margin: 25px 0 25px 0;
   line-height: 1.15;
   font-size: 4rem;
 }
@@ -70,7 +67,6 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
 }
 
 .card {
@@ -79,8 +75,6 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
 }
@@ -106,6 +100,31 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.navbar ul{
+  display: flex;
+  justify-content: center;
+}
+
+.navbar ul li{
+  margin-right: 5px;
+  margin-left: 5px;
+  list-style: none;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-radius: 5px;
+}
+
+.navbar ul li:hover{
+  background: #e7e6e6;
+}
+
+.rounded_lg{
+  border-radius: 5px;
 }
 
 @media (max-width: 600px) {
