--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,18 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.container {
+  padding: 0 2rem;
+}
+
+.main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex {
+  display: flex;
+}
