--- a/styles/BlogPost.module.css
+++ b/styles/BlogPost.module.css
@@ -2,6 +2,7 @@
   padding: 0 20rem;
 }
 
+
 .main {
   min-height: 100vh;
   display: flex;
@@ -19,4 +20,10 @@
 
 .text_left {
   text-align: left;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
