--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,5 +1,5 @@
 .container {
-    padding: 0 2rem;
+    padding: 0 20rem;
   }
   
   .main {
@@ -7,4 +7,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .mb_3 {
+    margin-bottom: 1.5rem;
+  }
+
+  .input_box {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1.9px solid rgb(0, 0, 0);
+    border-radius: 4px;
+    margin-bottom: 1rem;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  .label {
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .btn {
+    padding: 0.8rem 2rem;
+    border: 1.9px solid rgb(0, 0, 0);
+    border-radius: 4px;
+    margin-bottom: 1rem;
   }
