--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,6 +9,10 @@
   align-items: center;
 }
 
+.h2{
+  color: #fafafa;
+}
+
 .footer {
   display: flex;
   flex: 1;
@@ -40,6 +44,7 @@
   margin: 25px 0 25px 0;
   line-height: 1.15;
   font-size: 4rem;
+  color: white;
 }
 
 .title,
