--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -3,12 +3,34 @@
     display: flex;
     justify-content: space-between;
   }
-  
+
+  @media only screen and (max-Width: 880px)  {
+    .container {
+      flex-direction: column-reverse;
+    }
+
+    .main {
+      text-align: center;
+    }
+
+    .heading {
+      font-size: 30px;
+    }
+
+    
+    .Image{
+      align-content: center;
+      align-content: center;
+      justify-content: center;
+      display: flex;
+    }
+  }
+
   .main {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
   }
 
   .rounded_lg {
@@ -21,14 +43,14 @@
     padding-right: 15px;
     border-radius: 5px;
     border: none;
-    background-color: #005cd4;
+    background-color: #0033c1;
     cursor: pointer;
     color: white;
     font-size: 19px;
   }
 
   .btn:hover {
-    background-color: #0033c1;
+    background-color: #012894;
     color: white;
   }
 
@@ -36,7 +58,6 @@
     font-size: 50px;
     font-weight: bold;
     color: #000000;
-    margin-bottom: 20px;
   }
 
   .paragraph {
